// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#components/Widgets/Input Tests Snapshot 1`] = `
<Component
  id="test"
  type="text"
  value=""
/>
`;

exports[`#components/Widgets/Input Tests Snapshot 2`] = `
<Component
  id="test"
  type="number"
  value=""
/>
`;

exports[`#components/Widgets/Input Tests Snapshot 3`] = `
<Component
  id="test"
  type="text"
  value=""
/>
`;

exports[`#components/Widgets/Input Tests Snapshot 4`] = `
<Component
  id="test"
  type="number"
  value=""
/>
`;
